ui: 💄 fix tag explore main content margin and wrap button group

--- a/Views/Event/Location.cshtml.css
+++ b/Views/Event/Location.cshtml.css
@@ -403,7 +403,8 @@
   
   .button-group {
     width: 100%;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: flex-start;
   }
   
   .action-button {
